<?xml version="1.0"?>
<package format="2">
  <name>matrix_creator_hal</name>
  <version>0.0.0</version>
  <description>The matrix_creator_hal package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>matrix_creator_msgs</depend>
  <depend>roscpp</depend>
</package>
