<?xml version="1.0"?>
<package>
  <name>matrix_creator_ros</name>
  <version>0.0.0</version>
  <description>The matrix_creator_ros package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>matrix_creator_hal</run_depend>

  <export>
      <metapackage/>
  </export>
</package>
